style.css
@font-face {
    font-family: PPMonument;
    src: url(/font/PPMONUMENTEXTENDED-REGULAR.OTF);
  }

* {
    margin: 0;
    box-sizing: border-box;
    font-family: "PPMonument";
}

html, body {
    height: 100%;
    overflow-x: scroll;
    overflow-y: hidden;
}

.title {
    position: absolute;
    text-align: center;
    left: 0;
    right: 0;
    mix-blend-mode: difference;
    color:white;
    margin-top: 1rem;
    font-size: 3rem;
}

section div{
    min-width: 100vw;
    width: 100vw;
    height: 100vh;
    position: relative;
    padding: 50px 100px;
}

.container {
    display: flex;
    flex-direction: row;
    width: 100vw;
    overflow-x: auto;
    overflow-y: hidden;
}

/* FA ICON */

.fa {
    position: absolute;
    top: 50%;
    transform: translate(-50%, 0);
    height: fit-content;
    width: fit-content;
    color:black;
    cursor: pointer;
}

.fa-angle-right {
    right: 30px;
}

.fa-angle-left {
    left: 30px;
}

.nav {
    position: fixed;
  top: 0;
  left: 0;
  right: 0;
  text-align: center;
  margin-top: 30px;
}

/* FOOTER */

.footer {
    position: absolute;
    bottom: 45px;
    width: 100%;
    padding: 0 100px;
}

.footer .controls {
    display: flex;
    gap: 15px;
}

.footer .project-name {
    position: absolute;
    left: 0;
    right: 0;
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
}

.footer footer{
    display: flex;
    width: 100%;
    justify-content: space-between;
}

.footer .controls div {
    display: flex;
    flex-direction: column;
    gap: 10px;
    font-size: .6rem;
}

.footer .controls img {
    height: 25px;
}

.footer .colors {
    width: 15vw;
    display: flex;
}

.footer .colors div {
    height: 100%;
  width: 100%;
  transition: .2s ease;
  padding: 5px;
  font-size: .5rem;
  overflow-x: hidden;
  display: flex;
}

.footer .colors div span {
  margin-top: auto;
  margin-bottom: auto;
  color: transparent;
  mix-blend-mode: difference;
  transition: .5s ease;
}

.footer .colors div:hover {
    height: 100%;
  width: 200%;
}

.footer .colors div:hover span {
  color: white;
}

.footer .color1 {
    background-color: rgb(189, 180, 180);
}

.footer .color2 {
    background-color: rgb(84, 47, 47);
}

.footer .color3 {
    background-color: rgb(125, 87, 87);
}

.footer .color4 {
    background-color: rgb(58, 41, 41);
}

@media (max-width: 1250px) { 
    .footer .controls {
        display: none;
    }

    .footer .project-name {
        position: static;
        margin: 0;
    }

    .footer .colors {
        width: 25vw;
    }
}

@media (max-width: 750px) { 

    .footer .project-name {
        display: none;
    }

    .footer .colors {
        width: 100%;
        height: 50px;
    }
}

